update game tutorial

--- a/game_app/index.html
+++ b/game_app/index.html
@@ -98,7 +98,7 @@
                 <h4>Objective</h4>
                 <p>Your goal is to reach the target Treasury amount by the end of Year 20. Plan your farm wisely to maximize your income while surviving the effects of climate change.</p>
 
-                <h4>The Plants</h4>
+                <h4>The Plants (The production based on the plant's current health)</h4>
                 <ul>
                     <li><strong>🌾 Rice Paddy:</strong> A reliable staple crop.
                         <ul>
